log
Sat, May 17, 2025 12:15:14 AM: 
 sudoku.c | 21 +++++++++++++++++++++
 1 file changed, 21 insertions(+)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'get_adj_nodes':
sudoku.c:71:13: error: implicit declaration of function 'append' [-Werror=implicit-function-declaration]
             append(list, adj_node);
             ^~~~~~
cc1.exe: all warnings being treated as errors
3f0e54c
Sat, May 17, 2025 12:19:37 AM: 
 sudoku.c | 24 ++++++++++--------------
 1 file changed, 10 insertions(+), 14 deletions(-)
 tests:  0|0
6d78284
Sat, May 17, 2025 12:21:00 AM: 
 sudoku.c | 25 ++++++++++++++-----------
 1 file changed, 14 insertions(+), 11 deletions(-)
 tests:  2|4
total_score: 15/70
0d12a23
Sat, May 17, 2025 12:22:52 AM: 
 sudoku.c | 39 +++++++++++++++++++++++++++++++++++++++
 1 file changed, 39 insertions(+)
Compilation failed
In file included from test.c:5:0:
sudoku.c:82:5: error: redefinition of 'is_valid'
 int is_valid(Node* n){
     ^~~~~~~~
sudoku.c:46:5: note: previous definition of 'is_valid' was here
 int is_valid(Node* n){
     ^~~~~~~~
d3e07e2
